--- a/pj.html
+++ b/pj.html
@@ -22,9 +22,11 @@
         <div>
             <img src="illustration-mockups.svg" alt="">
         </div>
-        <div>
+        <div class="heading">
             <h2>Build The Community Your Fans Will Love </h2>
-            <p>Huddle re-imagine the way we build communites. you have a voice, but so does your audience. create connections with your users as you engage in genuine discussion. </p>
+            <p>Huddle re-imagine the way we build communites. you have a voice, 
+             but so does your audience. create connections with your 
+             users as you engage in genuine discussion. </p>
             <button>Register</button>
         </div>
         <div>
